Added suggestion text file and notebook with titles

--- a/ECG5000-2.ipynb
+++ b/ECG5000-2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4803a0e9",
+   "metadata": {},
+   "source": [
+    "### Importing necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c7043e1b",
@@ -26,6 +34,14 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "#from sklearn.preprocessing import MultiLabelBinarizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f64e53a2",
+   "metadata": {},
+   "source": [
+    "### Read data"
    ]
   },
   {
@@ -435,7 +451,7 @@
    "id": "2ae5f6d8",
    "metadata": {},
    "source": [
-    "OneHotEncode the target labels"
+    "### Function to OneHotEncode the target labels"
    ]
   },
   {
@@ -467,6 +483,14 @@
    "source": [
     "y = data['target']\n",
     "X = data.drop('target', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85465da0",
+   "metadata": {},
+   "source": [
+    "### Plot the ECG data"
    ]
   },
   {
@@ -735,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1a807708",
+   "id": "c648e4c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "237d72a7",
+   "id": "b4ebf57f",
    "metadata": {},
    "source": [
     "### Shuffling columns and applying PCA"
@@ -994,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "27625812",
+   "id": "9210a4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "db151e57",
+   "id": "d968e80c",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7757063a",
+   "id": "ff076c3c",
    "metadata": {},
    "source": [
     "As seen in the above plot, the data with shuffled columns also yields similar accuracy scores as PCA doesn't consider the order (order matters here as the data is a time series) which is flawed for this particular dataset.<br><br>\n",
@@ -1883,7 +1907,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "029e94d0",
+   "id": "7ac0bcc9",
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2227,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "61c95a2e",
+   "id": "0dd23c09",
    "metadata": {},
    "outputs": [
     {
@@ -2224,14 +2248,13 @@
     }
    ],
    "source": [
-    "y_predicted = np.argmax(y_predicted, axis=1)\n",
-    "y_predicted"
+    "y_predicted = np.argmax(y_predicted, axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f5638b8a",
+   "id": "93743203",
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ea206321",
+   "id": "9c792a64",
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e4b7c67",
+   "id": "d0ac6c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,7 +2351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f563a7e",
+   "id": "8d55d2ab",
    "metadata": {
     "scrolled": true
    },
@@ -2342,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f77b55",
+   "id": "c7f3a14f",
    "metadata": {},
    "outputs": [],
    "source": []
